# mical

./: .gitignore  Cargo.toml  justfile
examples/: duckparq.rs  fetchparq.rs  mytasks.rs
